# bluediamond-api

./: .env.example  README.md  db.sqlite3  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/management/commands/: build_react.py
api/migrations/: 0001_initial.py  0002_blogpost_slug.py  0003_contactsubmission.py
backend/: settings.py  urls.py
backend/static/frontend/: index.html
backend/static/frontend/assets/: index-BKJ1sPdW.js  index-BpPZ1b4N.js  index-Cfy5S7uF.css  index-DydELJ6W.css
backend/staticfiles/: index.html
backend/staticfiles/assets/: index-B1sqvQxT.js  index-BZI0MTcU.js  index-BsPZxcj_.js  index-C9-i6ueU.js  index-CYyZmqH8.js  index-Czmx5UK4.js  index-DQCZrt2P.js  index-DQTmDOpW.css  index-DQcm67w_.css  index-DdWX2DzO.js  index-DnyM3uSI.css  index-ZCf5tKdl.js  index-zVkCTYYV.js
backend/templates/: index.html
src/bluediamond_api/: __init__.py
